migration-result/ver/13.x/database-access/guides/sql-server-ad-pkinit.mdx
---
title: Microsoft SQL Server access with PKINIT authentication
description: How to configure Microsoft SQL Server access with Active Directory PKINIT authentication.
version: '13.x'
---

This guide will help you to:

- Install and configure Teleport.
- Set up access to SQL Server using Active Directory PKINIT authentication.
- Connect to SQL Server through Teleport.

```mermaid
%%{ init: { 'flowchart': { 'curve': 'stepBefore' } } }%%
graph LR
a(Users)
b[Teleport Proxy]
style b fill: #844cff,color: #ffffff
a-->b
b-->c
subgraph local [Private Network]
style local fill:#C0C0C0,stroke: #000000
  c[Teleport DB Service]
  style c fill: #a379ff,color: #ffffff
  subgraph ad [ ]
  direction TB
  style ad fill:none,stroke:none
    e[(SQL Servers)]
    d{Active Directory Users}
  end
  c-->d
  c-->e
  e-->d
end
```

```mermaid
%%{ init: { 'flowchart': { 'curve': 'stepBefore' } } }%%
graph LR
a(Users)
b[Teleport Cloud Tenant]
style b fill: #844cff,color: #ffffff
a-->b
b-->c
subgraph local [Private Network]
style local fill:#C0C0C0,stroke: #000000
  c[Teleport DB Service]
  style c fill: #a379ff,color: #ffffff
  subgraph ad [ ]
  direction TB
  style ad fill:none,stroke:none
    e[(SQL Servers)]
    d{Active Directory Users}
  end
  c-->d
  c-->e
  e-->d
end
```

This guide will focus on SQL Servers using self-hosted Active Directory
authentication.

## Prerequisites

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- A SQL Server database with Active Directory authentication enabled.

- A SQL Server network listener configured with a certificate using Subject Alternative Names.

- A Windows machine joined to the same Active Directory domain as the database.

- A Linux node with network access to an Active Directory installation and
  `kinit` command with PKINIT extensions installed:

  <Tabs>
    <Tab title="Ubuntu">
      ```code
      $ sudo apt-get update
      $ sudo apt-get -y install krb5-user krb5-pkinit
      ```
    </Tab>

    <Tab title="RHEL / CentOS 7">
      ```code
      $ sudo yum -y update
      $ sudo yum -y install krb5-workstation krb5-pkinit
      ```
    </Tab>
  </Tabs>

- Make sure you can connect to Teleport. Log in to your cluster using `tsh`, then use `tctl`
  remotely:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  13.2.0
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  You can run subsequent `tctl` commands in this guide on your local machine.

  For full privileges, you can also run `tctl` commands on your Auth Service host.
  ```code
  $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
  $ tctl status
  # Cluster  myinstance.teleport.sh
  # Version  13.2.0
  # CA pin   sha256:sha-hash-here
  ```
  You must run subsequent `tctl` commands in this guide on your local machine.

## Step 1/7. Create a Teleport user

<Tip>
  To modify an existing user to provide access to the Database Service, see [Database Access Access Controls](/ver/13.x/database-access/rbac)
</Tip>

Create a local Teleport user with the built-in `access` role:

```code
$ tctl users add \
  --roles=access \
  --db-users=\* \
  --db-names=\* \
  alice
```

Create a local Teleport user with the built-in `access` and `requester` roles:

```code
$ tctl users add \
  --roles=access,requester \
  --db-users=\* \
  --db-names=\* \
  alice
```

| Flag                      | Description                                                                                                                              |
| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| <nobr>`--roles`</nobr>    | List of roles to assign to the user. The builtin `access` role allows them to connect to any database server registered with Teleport.   |
| <nobr>`--db-users`</nobr> | List of database usernames the user will be allowed to use when connecting to the databases. A wildcard allows any user.                 |
| <nobr>`--db-names`</nobr> | List of logical databases (aka schemas) the user will be allowed to connect to within a database server. A wildcard allows any database. |

<Warning>
  Database names are only enforced for PostgreSQL and MongoDB databases.
</Warning>

For more detailed information about database access controls and how to restrict
access see [RBAC](/ver/13.x/database-access/rbac) documentation.

## Step 2/7. Configure a GPO to allow Teleport connections

We need to configure a GPO to allow Teleport database sessions. This includes
telling your computers to trust Teleport's CA and allowing certificate-based
smart card authentication.

### Export Teleport CA and CRL

<Note>
  You will need to repeat these steps if you rotate Teleport's database certificate authority.
</Note>

1. Get the Teleport database CA certificate by running:

   ```code
   $ tctl auth export --type=db-der > db-ca.cer
   ```

2. Get the Teleport database CRL by running:

   ```code
   $ tctl auth crl --type=db > db-ca.crl
   ```

3. Transfer the `db-ca.cer` and `db-ca.crl` files to a Windows machine where you can manage your group policy.

### Create a GPO and import the Teleport CA

<Note>
  For the purposes of this guide, we apply the GPO we are about to create to our
  entire AD domain. In the case where you wish for only a subset of computers
  within your AD domain to be accessible via Teleport, you should apply the GPO
  to an OU that includes only these computers.
</Note>

1. Create a GPO named `Teleport DB Access`.

   ```powershell
   $GPOName="Teleport DB Access"
   New-GPO -Name $GPOName | New-GPLink -Target $((Get-ADDomain).DistinguishedName)
   ```

2. Open the `Group Policy Management` program, and on the left pane,
   navigate to `$FOREST > Domains > $DOMAIN > Group Policy Objects`.

3. Right click on the GPO you just made (`Teleport DB Access`), and select `Edit...`.

4. In the group policy editor, select:

   ```text
   Computer Configuration > Policies > Windows Settings > Security Settings > Public Key Policies
   ```

5. Right click on `Trusted Root Certification Authorities` and select `Import`.

6. Click through the wizard, selecting your CA file (`db-ca.cer`).

![Import Teleport CA](../../../../../assets/ca-2472a9f383.png)

### Enable smart card service

Teleport performs certificate-based authentication by emulating a smart card.

1. Still editing your `Teleport DB Access`, select:

   ```text
   Computer Configuration > Policies > Windows Settings > Security Settings > System Services
   ```

2. Double click on `Smart Card`, select `Define this policy setting` and switch
   to `Automatic` then click `OK`.

![Enable Smartcard](../../../../../assets/smartcard-335c7ff556.png)

<Note>
  You will be modifying GPOs, and sometimes GPO modifications can take some time
  to propagate to all hosts. You can force your changes to take effect
  immediately on your current host at any time by opening a PowerShell prompt
  and running `gpupdate.exe /force` (though the effects of your changes may still take time to
  propagate to other machines on the domain).
</Note>

### Publish the Teleport CA

This step enables the domain controllers to trust the Teleport CA, which will
allow smart card logins via Teleport to succeed.

On a machine that is joined to your domain and logged in as an account in the
`Domain Administrators` group, run the two commands below at a PowerShell prompt
to publish the Teleport CA to your Active Directory domain (using the path
to the exported Teleport `db-ca.cer` file that you copied above):

```powershell
certutil –dspublish –f <PathToCertFile.cer> RootCA
certutil -dspublish -f <PathToCertFile.cert> NTAuthCA
```

### Publish the Teleport CRL

On the same machine, run the command below at a PowerShell prompt to publish the
Teleport CRL to your Active Directory domain (using the path to the exported
`db-ca.crl` file that you copied above).

```powershell
certutil -dspublish -f <PathToCRLFile.crl> TeleportDB
```

<Tip>
  To avoid waiting until the certificate propagates, you can force the CA
  retrieval from LDAP after importing the CA and CRL with the command:

  ```powershell
  certutil -pulse
  ```
</Tip>

## Step 3/7. Export the LDAP CA certificate

Teleport uses LDAPS to authenticate users, which requires specifying the LDAP CA
certificate on the database configuration. To ensure that Teleport trusts the
certificate sent by the server during the initial SSL connection, you must export
the certificate from your AD. You can export the certificate by running the
following PowerShell script on your Windows instance:

```powershell
$WindowsDERFile = $env:TEMP + "\windows.der"
$WindowsPEMFile = $env:TEMP + "\windows.pem"
certutil "-ca.cert" $WindowsDERFile 
certutil -encode $WindowsDERFile $WindowsPEMFile

$CA_CERT_PEM = Get-Content -Path $WindowsPEMFile
Write-Output $CA_CERT_PEM

Remove-Item $WindowsDERFile -Recurse
Remove-Item $WindowsPEMFile -Recurse
```

The script will write the LDAP CA contents in PEM format to the terminal, and
from there, you can copy and use it on your database configuration.

## Step 4/7. Set up the Teleport Database Service

The Database Service requires a valid auth token to connect to the cluster. Generate
one by running the following command against your Teleport Auth Service and save
it in `/tmp/token` on the node that will run the Database Service:

```code
$ tctl tokens add --type=db
```

Install Teleport on the host where you will run the Teleport Database Service:

Use the appropriate commands for your environment to install your package:

<Tabs dropdownView dropdownCaption="Teleport Edition">
  <Tab title="Open Source">
    ```code
    $ curl https://goteleport.com/static/install.sh | bash -s 13.2.0
    ```
  </Tab>

  <Tab title="Enterprise">
    <Tabs>
      <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
        ```code
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport APT repository for v13. You'll need to update this
        # file for each major release of Teleport.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v13" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        $ sudo apt-get update
        $ sudo apt-get install teleport-ent
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo apt-get install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (yum)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo yum install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport YUM repository for v13. You'll need to update this
        # file for each major release of Teleport.
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"

        # Install teleport
        $ sudo dnf install teleport-ent

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```

        For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

        ```code
        $ sudo dnf install teleport-ent-fips
        ```
      </Tab>

      <Tab title="Tarball">
        In the example commands below, update `$SYSTEM_ARCH` with the appropriate
        value (`amd64`, `arm64`, or `arm`). All example commands using this variable
        will update after one is filled out.

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```

        For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
        will be slightly different:

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```
      </Tab>
    </Tabs>
  </Tab>

  <Tab title="Cloud">
    <Tabs>
      <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
        Add the Teleport repository to your repository list:

        ```code
        # Download Teleport's PGP public key
        $ sudo curl https://apt.releases.teleport.dev/gpg \
        -o /usr/share/keyrings/teleport-archive-keyring.asc
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport apt repository for cloud.
        $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
        https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
        | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

        $ sudo apt-get update
        $ sudo apt-get install teleport-ent
        ```
      </Tab>

      <Tab title="Amazon Linux 2/RHEL 7 (yum)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport yum repository for cloud.
        # First, get the major version from $VERSION_ID so this fetches the correct
        # package version.
        $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
        $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"
        $ sudo yum install teleport-ent
        #
        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
        ```code
        # Source variables about OS version
        $ source /etc/os-release
        # Add the Teleport yum repository for cloud.
        # Use the dnf config manager plugin to add the teleport RPM repo
        $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"

        # Install teleport
        $ sudo dnf install teleport-ent

        # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
        # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
        ```
      </Tab>

      <Tab title="Tarball">
        In the example commands below, update `$SYSTEM_ARCH` with the appropriate
        value (`amd64`, `arm64`, or `arm`). All example commands using this variable
        will update after one is filled out.

        ```code
        $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
        # <checksum> <filename>
        $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        $ shasum -a 256 teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        # Verify that the checksums match
        $ tar -xvf teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
        $ cd teleport-ent
        $ sudo ./install
        ```
      </Tab>
    </Tabs>

    <Accordion title="Is my Teleport instance compatible with Teleport Cloud?">
      Before installing a `teleport` binary with a version besides v13,
      read our compatibility rules to ensure that the binary is compatible with
      Teleport Cloud.

      When running multiple `teleport` binaries within a cluster, the following rules
      apply:

      - **Patch and minor** versions are always compatible, for example, any 8.0.1
        component will work with any 8.0.3 component and any 8.1.0 component will work
        with any 8.3.0 component.
      - Servers support clients that are 1 major version behind, but do not support
        clients that are on a newer major version. For example, an 8.x.x Proxy Service
        is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
        guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
        This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
        You must upgrade to 7.x.x first.
      - Proxy Services and resource services do not support Auth Services that are on
        an older major version, and will fail to connect to older Auth Services by
        default. This behavior can be overridden by passing `--skip-version-check`
        when starting Proxy Services and resource services.
    </Accordion>
  </Tab>
</Tabs>

Copy the join token to a file on the instance where you will run the Database
Service, and then use the following configuration, replacing the fields on the
database section below as appropriate:

- `uri`: The server address, including the port.
- `domain`: The Active Directory domain (Kerberos realm) DNS/Address to which SQL Server is joined.
- `spn`: Service Principal Name (SPN) for SQL Server to fetch Kerberos tickets.
- `kdc_host_name`: SPN of the domain controller responsible for providing the LDAP CA.
- `ldap_cert`: The contents of the LDAP CA previously exported.

```yaml
version: v3
teleport:
  auth_token: abcd123-insecure-do-not-use-this
  proxy_server: teleport.example.com:443

auth_service:
  enabled: no
ssh_service:
  enabled: no
proxy_service:
  enabled: no

db_service:
  enabled: "yes"
  databases:
    - name: my-sqlserver
      protocol: sqlserver
      uri: SQL-SERVER-INSTANCE.ad.teleport.dev:1433
      ad:
        domain: ad.teleport.dev
        spn: MSSQLSvc/SQL-SERVER-INSTANCE.ad.teleport.dev:1433
        kdc_host_name: DOMAIN-CONTROLLER.ad.teleport.dev
        ldap_cert: |
          -----BEGIN CERTIFICATE-----
          ...
          -----END CERTIFICATE-----
```

<Tip>
  You can look SPNs up in the Attribute Editor of the Active Directory Users and
  Computers dialog on your AD-joined Windows machine.

  If you don't see the Attribute Editor tab, make sure that the "View > Advanced Features"
  toggle is enabled.
</Tip>

## Step 5/7. Start the Database Service

Start the Database Service:

```code
$ teleport start --config=/etc/teleport.yaml
```

## Step 6/7. Create SQL Server AD users

<Note>
  You can skip this step if you already have Active Directory logins in your
  SQL Server.
</Note>

Connect to your SQL Server as an administrative account (e.g. `sa`) and create
logins that will use Active Directory authentication:

```sql
master> CREATE LOGIN [EXAMPLE\alice] FROM WINDOWS WITH DEFAULT_DATABASE = [master], DEFAULT_LANGUAGE = [us_english];
```

## Step 7/7. Connect

Log in to your Teleport cluster. Your SQL Server database should appear in the
list of available databases:

```code
$ tsh login --proxy=teleport.example.com --user=alice
$ tsh db ls
# Name      Description         Labels
# --------- ------------------- -------
# sqlserver                     env=dev
```

```code
$ tsh login --proxy=mytenant.teleport.sh --user=alice
$ tsh db ls
# Name      Description         Labels
# --------- ------------------- -------
# sqlserver                     env=dev
```

To retrieve credentials for a database and connect to it:

```code
$ tsh db connect --db-user=teleport sqlserver
```

<Note>
  When you run the `tsh db connect` command above, `tsh` attempts to execute
  the `mssql-cli` command-line client, which must be available in the user's
  `PATH`. If you do not have `mssql-cli` available on your system, you can run the
  following command to start a local proxy server that you can connect
  to with your SQL Server client:

  ```code
  $ tsh proxy db --db-user=teleport --tunnel sqlserver
  ```

  Read the [Database Access GUI Clients](/ver/13.x/connect-your-client/gui-clients#sql-server-with-azure-data-studio)
  guide for how to connect your DB GUI client to the local proxy.
</Note>

To log out of the database and remove credentials:

```code
$ tsh db logout sqlserver
```

## Troubleshooting

### Teleport CA and CRL not imported correctly

When connecting to your database, you get an error `Error message: authentication
failed` and Teleport Database Service logs have the error message `Failed to
authenticate with KDC: kinit: Client not trusted while getting initial
credentials`. This happens when the Teleport Database CA is not imported
correctly or propagated yet. You can force the propagation by running
`certutil -pulse` and trying to connect to your database.

### Invalid KDC hostname

If you’re connecting to your database and receive the error `Error message:
authentication failed` and on Teleport Database Service logs, there is the error
entry `Failed to authenticate with KDC: Password for user@AD.TELEPORT.DEV:
\nkinit: Cannot read password while getting initial credentials`, which means
that the KDC hostname is wrong. You can verify your domain controller’s SPN to
see if they’re set correctly and update the value on the field `kdc_hostname` on
your database's configuration.

### Teleport cannot verify database CA

If your database has a CA that Teleport doesn’t know about, it will return the
following error when connecting to it: `Error message: TLS Handshake failed:
x509: certificate signed by unknown authority (possibly because of "x509:
invalid signature: parent certificate cannot sign this kind of certificate"
while trying to verify candidate authority certificate
"SSL_Self_Signed_Fallback")`.

To solve this, you can add the following configuration to your Teleport Database Service instance:

```diff
...
db_service:
  databases:
    - name: sqlserver
      protocol: sqlserver
+     tls:
+       # Point it to your Database CA PEM certificate.
+       ca_cert_file: "rdsca.pem"
+       # If your database certificate has an empty CN filed, you must change
+       # the TLS mode to only verify the CA.
+       mode: verify-ca
      ad:
       ...
```

If you’re unable to acquire the database CA, you can skip TLS verification by
providing the configuration `tls.mode: "insecure"`. However, we do not recommend
skipping TLS verification in production environments.

## Next steps

{/* lint ignore list-item-spacing remark-lint */}

- Learn how to [restrict access](/ver/13.x/database-access/rbac) to certain users and databases.

{/* lint ignore list-item-spacing remark-lint */}

- View the [High Availability (HA)](/ver/13.x/database-access/guides/ha) guide.

{/* lint ignore list-item-spacing remark-lint */}

- Take a look at the YAML configuration [reference](/ver/13.x/database-access/reference/configuration).

{/* lint ignore list-item-spacing remark-lint */}

- See the full CLI [reference](/ver/13.x/database-access/reference/cli).

## Further reading

- [Kerberos PKINIT authentication](https://web.mit.edu/kerberos/krb5-1.13/doc/admin/pkinit.html).
